--- a/src/utils/translations/en.json
+++ b/src/utils/translations/en.json
@@ -1,5 +1,7 @@
 {
   "modal": {
+    "yes": "Yes", 
+    "no": "No", 
     "confirmLogOutMessage": "Are you sure to logout?",
     "confirmDeleteAccountMessage": "Do you want to delete your account?",
 		"invite": {
@@ -13,7 +15,7 @@
 		},
     "earnPoints": {
       "messagePrefix": "You've Earned",
-      "completedOnboardingMessage": ""
+      "completedOnboardingMessage": "Your account is ready to use. You will be redirected to the Home Page in a few seconds."
     }
   },
   "screens": {
@@ -36,6 +38,9 @@
       "city": {
         "title": "Name your city",
         "description": "Mark yourself in your city to connect with pals",
+        "searchPlaceholder": "Search for a city",
+        "emptySearchTitle": "No result",
+        "emptySearchMessage": "Can't find what you're looking for.\nTry search for different city or continue with the location you entered.",
         "continueButton": "Continue"
       },
       "userDescriptions": {
