--- a/src/utils/translations/kr.json
+++ b/src/utils/translations/kr.json
@@ -106,6 +106,13 @@
         "description": "AiGO 러버",
 		"phoneNumber": ""
       },
+	  "partnerSection": {
+		"partner": "Partner Program",
+		"partnerName": "Nyam Nyam Box",
+		"descriptionPrefix": "Verify if you are a Nyam Nyam Box user to receive",
+		"reward": "100 GO",
+		"descriptionSuffix": "points"
+	  },
       "settingSection": {
         "setting": "Settings",
         "language": "Language"
