--- a/src/utils/translations/en.json
+++ b/src/utils/translations/en.json
@@ -131,6 +131,12 @@
         "deleteAccountButton": "Delete account",
         "versionPrefix": "Version"
       }
-    }
+    },
+	"nnidVerify": {
+		"title": "Nyam Nyam Box Verification",
+		"enterNNID": "Enter Nyam Nyam ID",
+		"subText": "Enter your user ID in Nyam Nyam Box App. Go to setting .... to find your ... ID number below",
+		"errorMessage": "ID not matched, try again."
+	}
   }
 }
