--- a/src/utils/translations/kr.json
+++ b/src/utils/translations/kr.json
@@ -3,8 +3,8 @@
   "modal": {
     "yes": "예",
     "no": "아니요",
-	"cancel": "Cancel",
-	"confirm": "Confirm",
+    "cancel": "취소",
+    "confirm": "확인",
     "confirmLogOutMessage": "로그아웃하시겠습니까??",
     "confirmDeleteAccountMessage": "계정을 삭제하시겠습니까??",
     "invite": {
@@ -32,16 +32,16 @@
       "googleButton": "Google 계정으로 로그인",
       "appleButton": "Apple 계정으로 로그인",
       "versionPrefix": "버전",
-	  "phoneNumberLogin": {
-		  "login": "Login",
-		  "subText": "Please confirm your country code and enter your phone number",
-		  "continueButton": "계속하기"
-	  },
-	  "otpConfirm": {
-		  "enterCode": "Enter code",
-		  "subText": "We've sent as SMS with a 6-digit activation code to your phone",
-		  "verifyButton": "인증하기"
-	  }
+      "phoneNumberLogin": {
+        "login": "로그인",
+        "subText": "국가 코드와 핸드폰 번호를 확인해주세요",
+        "continueButton": "계속하기"
+      },
+      "otpConfirm": {
+        "enterCode": "코드를 입력하세요",
+        "subText": "6자리 인증코드를 핸드폰으로 발송하였습니다",
+        "verifyButton": "인증하기"
+      }
     },
     "onboard": {
       "name": {
@@ -93,7 +93,7 @@
       "dailyCheckInSection": {
         "title": "출석 체크",
         "checkInButton": "출석하기",
-		"checkInDay": "Day"
+        "checkInDay": "Day"
       },
       "dailyMissionSection": {
         "title": "일일 미션"
@@ -118,8 +118,8 @@
         "description": "AiGO 러버"
       },
       "settingSection": {
-        "setting": "Settings",
-        "language": "Language"
+        "setting": "설정",
+        "language": "언어"
       },
       "referralSection": {
         "title": "추천 코드",
