chore: use point from activity config

--- a/src/utils/translations/en.json
+++ b/src/utils/translations/en.json
@@ -110,7 +110,7 @@
         "partner": "Partner Program",
         "partnerName": "Nyam Nyam Box",
         "descriptionPrefix": "Verify if you are a Nyam Nyam Box user to receive",
-        "reward": "100 GO",
+        "reward": "GO",
         "descriptionSuffix": "points",
         "phoneNumberVerified": "Phone number verified",
         "phoneNumberUnverified": "Phone number not verified",
@@ -136,11 +136,11 @@
         "versionPrefix": "Version"
       }
     },
-	"nnidVerify": {
-		"title": "Nyam Nyam Box Verification",
-		"enterNNID": "Enter Nyam Nyam ID",
-		"subText": "Enter your user ID in Nyam Nyam Box App. Go to setting .... to find your ... ID number below",
-		"errorMessage": "ID not matched, try again."
-	}
+    "nnidVerify": {
+      "title": "Nyam Nyam Box Verification",
+      "enterNNID": "Enter Nyam Nyam ID",
+      "subText": "Enter your user ID in Nyam Nyam Box App. Go to setting .... to find your ... ID number below",
+      "errorMessage": "ID not matched, try again."
+    }
   }
 }
