--- a/src/utils/translations/kr.json
+++ b/src/utils/translations/kr.json
@@ -110,7 +110,7 @@
         "partner": "Partner Program",
         "partnerName": "Nyam Nyam Box",
         "descriptionPrefix": "Verify if you are a Nyam Nyam Box user to receive",
-        "reward": "100 GO",
+        "reward": "GO",
         "descriptionSuffix": "points",
         "phoneNumberVerified": "Phone number verified",
         "phoneNumberUnverified": "Phone number not verified",
