--- a/src/utils/translations/en.json
+++ b/src/utils/translations/en.json
@@ -3,8 +3,8 @@
   "modal": {
     "yes": "Yes",
     "no": "No",
-	"cancel": "Cancel",
-	"confirm": "Confirm",
+    "cancel": "Cancel",
+    "confirm": "Confirm",
     "confirmLogOutMessage": "Are you sure to logout?",
     "confirmDeleteAccountMessage": "Do you want to delete your account?",
     "invite": {
@@ -32,16 +32,19 @@
       "googleButton": "Log in with Google",
       "appleButton": "Log in with Apple",
       "versionPrefix": "Version",
-	  "phoneNumberLogin": {
-		  "login": "Login",
-		  "subText": "Please confirm your country code and enter your phone number",
-		  "continueButton": "Continue"
-	  },
-	  "otpConfirm": {
-		  "enterCode": "Enter code",
-		  "subText": "We've sent as SMS with a 6-digit activation code to your phone",
-		  "verifyButton": "Verify"
-	  }
+      "phoneNumberLogin": {
+        "login": "Login",
+        "subText": "Please confirm your country code and enter your phone number",
+        "continueButton": "Continue"
+      },
+      "otpConfirm": {
+        "enterCode": "Enter code",
+        "subText": "We've sent as SMS with a 6-digit activation code to your phone",
+        "verifyButton": "Verify",
+        "wrongCodeError": "Wrong code, please try again",
+        "getCredentialsError": "Failed to get user credential",
+        "getProfileError": "Failed to update account, something went wrong"
+      }
     },
     "onboard": {
       "name": {
@@ -93,7 +96,7 @@
       "dailyCheckInSection": {
         "title": "Daily Check-in",
         "checkInButton": "Check-in",
-		"checkInDay": "Day"
+        "checkInDay": "Day"
       },
       "dailyMissionSection": {
         "title": "Daily Missions"
@@ -154,6 +157,20 @@
       "enterNNID": "Enter Nyam Nyam ID",
       "subText": "Enter your user ID in Nyam Nyam Box App. Go to setting .... to find your ... ID number below",
       "errorMessage": "ID not matched, try again."
+    },
+    "phoneNumberVerify": {
+      "title": "Verify Phone number",
+      "subText": "Please confirm your country code and enter your phone number.",
+      "continueButton": "Continue",
+      "OTP": {
+        "title": "Enter code",
+        "subText": "We've sent as SMS with a 6-digit activation code to your phone",
+        "verifyButton": "Verify",
+        "wrongCodeError": "Wrong code, please try again",
+        "linkAccountError": "Failed to link account, something went wrong",
+        "updateAccountError": "Failed to get updated account, something went wrong",
+        "updateVerificationError": "Failed to update verification, something went wrong"
+      }
     }
   }
 }
