feat: simple map section in Home screen

--- a/apps/mobile/src/utils/translations/en.json
+++ b/apps/mobile/src/utils/translations/en.json
@@ -106,6 +106,10 @@
       },
       "dailyMissionSection": {
         "title": "Daily Missions"
+      },
+      "mapSection": {
+        "title": "AiGO Map",
+        "openButton": "Open Map"
       }
     },
     "profile": {
