--- a/apps/mobile/src/utils/translations/kr.json
+++ b/apps/mobile/src/utils/translations/kr.json
@@ -106,6 +106,10 @@
       },
       "dailyMissionSection": {
         "title": "일일 미션"
+      },
+      "mapSection": {
+        "title": "AiGO Map",
+        "openButton": "Open Map"
       }
     },
     "profile": {
