chore: correct content in app invitation

--- a/apps/mobile/src/utils/translations/en.json
+++ b/apps/mobile/src/utils/translations/en.json
@@ -92,10 +92,10 @@
       },
       "inviteSection": {
         "title": "Invite your friends",
-        "referral": "referral",
+        "referral": "/referral",
         "referralCountSuffix": "Referrals",
         "descriptionPrefix": "Receive",
-        "descriptionSuffix": "& earn 10% from their earning",
+        "descriptionSuffix": "",
         "inviteButton": "Invite"
       },
       "dailyCheckInSection": {
