--- a/apps/mobile/src/utils/translations/en.json
+++ b/apps/mobile/src/utils/translations/en.json
@@ -100,7 +100,7 @@
       },
       "dailyCheckInSection": {
         "title": "Daily Check-in",
-        "checkInButton": "Check-in",
+        "checkInButton": "Collect 10 GO",
         "checkInDay": "Day"
       },
       "dailyMissionSection": {
