--- a/apps/mobile/src/utils/translations/en.json
+++ b/apps/mobile/src/utils/translations/en.json
@@ -5,7 +5,9 @@
     "no": "No",
     "cancel": "Cancel",
     "confirm": "Confirm",
+	"confirmLogOutTitle": "Log out",
     "confirmLogOutMessage": "Are you sure to logout?",
+	"confirmDeleteAccountTitle": "Delete account",
     "confirmDeleteAccountMessage": "Do you want to delete your account?",
     "invite": {
       "title": "Invite your friends !",
