--- a/apps/mobile/src/utils/translations/en.json
+++ b/apps/mobile/src/utils/translations/en.json
@@ -106,9 +106,8 @@
       "dailyMissionSection": {
         "title": "Daily Missions"
       },
-      "mapSection": {
-        "title": "AiGO Map",
-        "openButton": "Open Map"
+      "startTrip": {
+        "openButton": "Start your trip now"
       }
     },
     "profile": {
