feat: update point popup layout

--- a/apps/mobile/src/utils/translations/en.json
+++ b/apps/mobile/src/utils/translations/en.json
@@ -18,7 +18,9 @@
       "shareButton": "Share with friends"
     },
     "earnPoints": {
+      "title": "Congratulation",
       "messagePrefix": "You've Earned",
+      "messageSuffix": "points",
       "completedOnboardingMessage": "Your account is ready to use. You will be redirected to the Home Page in a few seconds."
     },
     "citySelection": {
